--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -50,3 +50,54 @@
     }
   }
 }
+.search {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 533px;
+}
+.search__inner {
+  padding: 155px 0 100px;
+  color: #fff;
+  text-align: center;
+  &-title{
+    font-size: 48px;
+    line-height: 72px;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+  &-text{
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 500;
+    margin-bottom: 50px;
+  }
+  &-form{
+    max-width: 670px;
+    margin: 0 auto;
+    position: relative;
+    input{
+      display: block;
+      width: 100%;
+      box-shadow: 0 1px 10px rgba(124, 178, 64, 0.75);
+      border-radius: 4px;
+      height: 56px;
+      border: none;
+      font-size: 14px;
+      font-weight: 500;
+      padding-left: 25px;
+      padding-right: 60px;
+      &::placeholder{
+        color: #90a4ae;
+        font-weight: 500;
+      }
+    }
+    button{
+      position: absolute;
+      border: none;
+      background-color: transparent;
+      top: 16px;
+      right: 20px;
+    }
+  }
+}
