--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -19,9 +19,9 @@ li {
 }
 body {
   font-family: 'Roboto-Regular', sans-serif;
+  font-weight: 400;
   font-size: 15px;
   line-height: 24px;
-  font-weight: 400;
   color: $text;
 }
 .container {
@@ -41,9 +41,9 @@ body {
   }
 }
 .title{
+  @include f700;
   text-align: center;
   color: $bg;
-  font-weight: 700;
   font-size: 36px;
   line-height: 60px;
   margin-bottom: 30px;
