--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -344,3 +344,34 @@
 }
 
 // end block author
+
+// tutorial start
+
+.tutorial{
+  padding: 70px 0 120px;
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__item{
+    max-width: 370px;
+    width: 100%;
+    &-images{
+      img{
+        display: block;
+      }
+    }
+    &-title{
+      background-color: #f8f8f8;
+      font-size: 24px;
+      font-weight: 700;
+      line-height: 60px;
+      @include f700;
+      padding: 30px 10px;
+      color: $bg;
+      text-align: center;
+    }
+  }
+}
+
+// tutorial end
