--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -19,6 +19,30 @@
   font-display: block;
 }
 
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+
+.icon-search:before {
+  content: "\f002";
+}
+.icon-th-large:before {
+  content: "\f009";
+}
+.icon-th-list:before {
+  content: "\f00b";
+}
 .icon-map-marker:before {
   content: "\f041";
 }
@@ -27,6 +51,12 @@
 }
 .icon-phone:before {
   content: "\f095";
+}
+.icon-sort:before {
+  content: "\f0dc";
+}
+.icon-unsorted:before {
+  content: "\f0dc";
 }
 .icon-bolt:before {
   content: "\f0e7";
@@ -39,4 +69,7 @@
 }
 .icon-location-arrow:before {
   content: "\f124";
+}
+.icon-sort-amount-desc:before {
+  content: "\f161";
 }
