--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,7 +3,9 @@
 @import 'fonts';
 
 // start header
-
+.header{
+  background-color: #fff;
+}
 .header__top-inner {
   display: flex;
   justify-content: space-between;
@@ -32,6 +34,9 @@
   background-color: $red;
   margin-left: 7px;
 }
+.header__btn-logout{
+  background-color: $red;
+}
 .header__menu{
   background-color: $bg;
 }
@@ -52,7 +57,260 @@
     }
   }
 }
-
+.header__circle{
+  &.active{
+    display: block;
+  }
+  display: none;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background-color: #f5f5f5;
+  position: relative;
+  color: #a0a0a0;
+  font-size: 14px;
+  &::before{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  span{
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 18px;
+    right: -7px;
+    top: -7px;
+    font-size: 11px;
+    color: #fff;
+  }
+}
+.header__box{
+  display: flex;
+  align-items: center;
+}
+.notification{
+  span{
+    background-color: $yellow;
+  }
+}
+.message{
+  span{
+    background-color: $tomato;
+  }
+}
+.basket{
+  margin-right: 20px;
+  span{
+    background-color: $green;
+  }
+}
+.header__btn-login--off{
+  display: none;
+}
+.header__btn-logout{
+  display: none;
+  &.header__btn-login--on{
+    display: block;
+  }
+}
+.user{
+  margin-right: 25px;
+  padding-right: 20px;
+  position: relative;
+  &::before{
+    content:'\f107';
+    font-family: 'icomoon';
+    position: absolute;
+    right: 0;
+    top: 0;
+    font-size: 16px;
+    color: #707070;
+  }
+  &__inner{
+    display: flex;
+    align-items: center;
+  }
+  &__images{
+    margin-right: 15px;
+    width: 34px;
+    height: 34px;
+    overflow: hidden;
+    border-radius: 50%;
+  }
+  &__info{
+    line-height: 24px;
+    font-size: 14px
+  }
+  &__name{
+    color: #222;
+    @include f500;
+  }
+  &__money{
+    color: $green;
+    @include f700;
+  }
+}
+.user__box,
+.basket__box,
+.notification__box,
+.message__box{
+  position: relative;
+  height: 90px;
+  margin-top: 40px;
+  &:hover{
+    .user__menu{
+      height: auto;
+      border-width: 1px;
+      padding: 20px;
+      overflow: auto;
+    }
+  }
+}
+.circle__menu{
+  border-top: 1px solid #e0e0e0;
+  position: absolute;
+  top: 62px;
+  right: 0;
+  height: 0;
+  overflow: hidden;
+  transition: all .3s;
+  z-index: 1;
+}
+.basket__box,
+.notification__box,
+.message__box{
+  margin-top: 54px;
+  margin-left: 15px;
+  &:hover{
+    .circle__menu{
+      overflow: hidden;
+      height: auto;
+    }
+    .circle__item{
+      padding: 23px 23px;
+      border-width: 1px;
+    }
+    .header__circle{
+      &::before{
+      color: $bg;
+      }
+    }
+  }
+}
+.circle__item{
+  background-color: #fff;
+  padding: 0 23px;
+  border: 0px solid #e0e0e0;
+  border-left-width: 1px;
+  border-right-width: 1px;
+  border-top: none;
+  width: 269px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  transition: all .3s;
+  &::before{
+    position: absolute;
+    top: 27px;
+    right: 28px;
+    font-size: 16px;
+    color: #b0bec5;
+  }
+}
+.circle__images{
+  margin-right: 15px;
+}
+.circle__info{
+  line-height: 22px;
+  &-name{
+    @include f500;
+    color: $bg;
+  }
+  &-thema{
+    font-size: 12px;
+    color: $green;
+  }
+  &-price{
+    @include f500;
+    color: #000;
+    font-size: 16px;
+  }
+  &-date{
+    font-size: 10px;
+    color: #707070;
+  }
+}
+.basket__summ{
+  padding: 16px 17px 12px;
+  border: 1px solid #e0e0e0;
+  border-top: none;
+  background-color: #fff;
+  @include f700;
+}
+.basket__title{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 13px 0 22px;
+  font-size: 16px;
+  margin-bottom: 15px;
+  color: $bg;
+}
+.basket__btn{
+  color: #fff;
+  font-size: 14px;
+  padding: 12px 5px;
+  background-color: $green;
+  text-align: center;
+  width: 100px;
+  border: none;
+  &-checkout{
+    background-color: $red;
+    width: 123px;
+    margin-left: 6px;
+  }
+}
+.user__menu{
+  border: 0px solid #cccccc;
+  background-color: #fff;
+  padding: 0px 20px;
+  width: 158px;
+  position: absolute;
+  top: 69px;
+  left: 20px;
+  transition: all .3s;
+  height: 0;
+  overflow: hidden;
+  a{
+    font-size: 12px;
+    color: #547e7a;
+    margin-bottom: 15px;
+  }
+}
+.notification__menu,
+.message__menu{
+  .circle__images{
+    margin-right: 20px;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+  }
+  .circle__info{
+    line-height: 18px;
+  }
+}
+.icons-color{
+  &::before{
+    color: $tomato;
+  }
+}
+.header__btn-menu,
+.menu__btn{
+  display: none;
+}
 // end header
 // start search
 .search {
@@ -431,7 +689,10 @@
   }
 }
 .footer__col-menu {
-  max-width: 200px;
+  max-width: 215px;
+  &--second{
+    max-width: 200px;
+  }
 }
 .footer__info{
   @include f500;
@@ -883,3 +1144,10 @@ button.icon-unsorted{
   }
 }
 // end product-page
+
+
+
+
+
+
+@import 'media';
