--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1145,7 +1145,321 @@ button.icon-unsorted{
 }
 // end product-page
 
+// start product-one
 
+.product-one{
+  padding-bottom: 100px;
+  &__inner{
+    display: flex;
+  }
+  &__content{
+    margin-right: 31px;
+    max-width: 870px;
+  }
+  &__images{
+    max-width: 829px;
+    width: 100%;
+    height: 422px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    &-inner{
+      background-color: #fff;
+      border: 1px solid #dcdcdc;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 30px;
+      padding: 16px 0;
+    }
+  }
+  &__title{
+    font-size: 30px;
+    color: $bg;
+    line-height: 40px;
+    @include f500;
+    margin-bottom: 20px;
+  }
+  &__text{
+    font-size: 16px;
+    color: #707070;
+    margin-bottom: 35px;
+    margin-top: 20px;
+  }
+  &__box{
+    margin-bottom: 55px;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+  }
+  &__link{
+    a{
+      padding: 16px 8px;
+      width: 150px;
+      color: $grey;
+      font-size: 14px;
+      & + a{
+      margin-left: 20px;
+      }
+    }
+    &--live{
+      background-color: $red;
+    }
+    &--screenshot{
+      background-color: #455a64;
+    }
+    &--documentation{
+      background-color: $green;
+    }
+  }
+  &__social{
+    a{
+      width: 54px;
+      height: 50px;
+      position: relative;
+      & + a{
+        margin-right: 3px;
+      }
+      &::before{
+        font-size: 18px;
+        color: #fff;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+      }
+    }
+  }
+  &__more{
+    &-title{
+      font-size: 18px;
+      @include f500;
+      color: $bg;
+      padding: 18px 25px;
+      background-color: #fff;
+      border: 1px solid #dcdcdc;
+      margin-bottom: 28px;
+    }
+    &-icons{
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+  }
+  &__tabs{
+    margin-bottom: 55px;
+  }
+}
+.productmini{
+  margin-bottom: 27px;
+  display: flex;
+  align-items: center;
+  height: 90px;
+  max-width: 270px;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 1px 2px rgba(205, 214, 222, 0.75);
+  &__images{
+    width: 100px;
+    height: 90px;
+    margin-right: 20px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  &__name{
+    font-size: 14px;
+    @include f500;
+    color: $bg;
+  }
+  &__thema{
+    font-size: 12px;
+    color: $green;
+  }
+  &__price{
+    font-size: 18px;
+    @include f700;
+    color: $bg;
+  }
+}
+.tabs{
+  display: flex;
+  text-align: center;
+  border: 1px solid #d7d7d7;
+  .tab{
+    background-color: #fff;
+    width: 100%;
+    font-size: 16px;
+    color: #70838d;
+    padding: 20px 0;
+    cursor: pointer;
+    & + .tab{
+      border-left: 1px solid #d7d7d7;
+    }
+  }
+}
+.tab_content{
+  background-color: #fff;
+  border: 1px solid #d7d7d7;
+  border-top: none;
+  padding: 30px 30px 50px;
+}
+.tab-item{
+  display: none;
+  &:first-child{
+    display: block;
+  }
+}
+.tab-items__list{
+  line-height: 36px;
+  font-size: 16px;
+  color: #707070;
+  column-count: 2;
+  column-gap: 25px;
+  li{
+    max-width: 270px;
+    width: 100%;
+  }
+}
+.icon-facebook{
+  background-color: #6370b6;
+}
+.icon-twitter{
+  background-color: #64b5f6;
+}
+.icon-linkedin{
+  background-color: #4f71ce;
+}
+.icon-pinterest-p{
+  background-color: #d32f2f;  
+}
+.price__box{
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 0;
+}
+.price__product{
+  font-size: 22px;
+  @include f500;
+  color: $red;
+}
+.product__price{
+  button{
+    text-align: center;
+    border: none;
+    margin-bottom: 7px;
+    box-shadow: 0 1px 2px rgba(69, 90, 100, 0.75);
+    background-color: $green;
+    color: #fff;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif !important;
+    font-weight: 700;
+    display: block;
+    padding: 17px 5px 15px;
+    width: 100%;
+    cursor: pointer;
+    background-color: $text;
+    &::before{
+      font-weight: 400;
+      font-family: 'icomoon';
+      padding-right: 8px;
+    }
+  }
+  .icon-heart-o{
+    background-color: #42a5f5;
+  }
+  .icon-shopping-cart{
+    background-color: $green;
+  }
+}
+.product-author__box{
+  padding: 25px 0;
+  display: flex;
+}
+.author__avatar{
+  margin-right: 14px;
+}
+.author__name{
+  font-size: 18px;
+  color: $bg;
+  margin-bottom: 2px;
+}
+.author__info-link{
+  color: #707070;
+  font-size: 13px;
+  padding: 6px 5px 6px;
+  border: 1px solid #d6d6d6;
+}
+.author__awards-list{
+  li{
+    display: inline-block;
+    color: #fff;
+    font-size: 20px;
+    text-align: center;
+    padding-top: 6px;
+    & + li{
+      margin-left: 4px;
+    }
+  }
+  .icon-meh-o{
+    background-image: url(../images/product-one/awards-bg1.png);
+    width: 34px;
+    height: 37px;
+  }
+  .icon-pagelines{
+    background-image: url(../images/product-one/awards-bg2.png);
+    width: 34px;
+    height: 37px;
+  }
+  .icon-flash{
+    background-image: url(../images/product-one/awards-bg3.png);
+    width: 34px;
+    height: 37px;
+  }
+  .icon-foursquare{
+    background-image: url(../images/product-one/awards-bg4.png);
+    width: 34px;
+    height: 37px;
+  }
+  .icon-yen{
+    background-image: url(../images/product-one/awards-bg5.png);
+    width: 34px;
+    height: 37px;
+  }
+}
+.aside__item-sales{
+  padding-top: 23px;
+  font-size: 16px;
+  @include f300;
+  color: #707070;
+  span{
+    font-size: 20px;
+    @include f700;
+    color: #263238;
+    padding-right: 13px;
+    &::before{
+      content: '\f07a';
+      font-family: 'icomoon';
+      font-size: 20px;
+      margin-right: 20px;
+      color: #a6b5bb;
+    }
+  }
+}
+.aside__item.sales-number{
+  padding-bottom: 25px;
+}
+.information__line{
+  font-size: 14px;
+  color: #70838d;
+  margin-top: 20px;
+  line-height: 18px;
+  span{
+    color: $bg;
+    @include f500;
+  }
+}
+// end product-one
 
 
 
