--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1751,5 +1751,94 @@ button.icon-unsorted{
   }
 }
 // end contacts
-
+// start settings
+.settings{
+  padding-bottom: 100px;
+}
+.product-one__tabs.settings__tabs{
+  display: flex;
+  .tabs{
+    display: block;
+    max-width: 270px;
+    width: 100%;
+    height: 100%;
+    margin-right: 30px;
+    text-align: left;
+    border: 1px solid #dedede;
+    border-bottom: none;
+    span{
+      display: block;
+      color: #707070;
+      background-color: #fff;
+      border-bottom: 1px solid #dedede;
+      padding: 17px 17px 17px 50px;
+      font-size: 14px;
+      @include f500;
+      &.active{
+        border-bottom: 1px solid $green;
+        color: #37474f;
+        &::before{
+          color: $green;
+        }
+      }
+      &::before{
+        left: 24px;
+        top: auto;
+        color: #444;
+      }
+    }
+  }
+  .tab_content{
+    width: 100%;
+    padding: 0;
+    border: none;
+  }
+  .tabs .tab+.tab{
+    border-left: none;
+  }
+}
+.page-box{
+  background-color: #fff;
+  border: 1px solid #dedede;
+  min-height: 100%;
+}
+.page-box__title{
+  border-bottom: 1px solid #dedede;
+  padding: 18px 34px;
+  color: $bg;
+  font-size: 24px;
+  @include f500;
+}
+.page-box__content{
+  padding: 30px 35px 80px;
+}
+.settings__line{
+  margin-bottom: 21px;
+  display: flex;
+  align-items: center;
+  label{
+    width: 260px;
+    color: #444;
+  }
+  input{
+    max-width: 540px;
+    width: 100%;
+    height: 40px;
+    padding: 0 10px;
+    color: #000;
+    background-color: #f9f9f9;
+    border: 1px solid #dedede;
+  }
+  select{
+    max-width: 540px;
+    width: 100%;
+    height: 40px;
+    padding: 0 10px;
+    color: #000;
+    background-color: #f9f9f9;
+    border: 1px solid #dedede;
+    color: #707070;
+  }
+}
+// end settings
 @import 'media';
