--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -9,6 +9,9 @@ html {
 html,
 body {
   height: 100%;
+  display: block;
+  position: relative;
+  overflow-x: hidden;
 }
 a {
   display: inline-block;
@@ -27,7 +30,6 @@ body {
   font-size: 15px;
   line-height: 24px;
   color: $text;
-  overflow-x: hidden;
 }
 .wrapper{
   display: flex;
@@ -74,6 +76,8 @@ body {
 .breadcrumbs{
   &__inner{
     padding: 45px 0 40px;
+    overflow: hidden;
+    width: 1200px;
   }
   &__list{
     li{
